# chenoj-backend/src/main/java/com/yupi/chenoj/controller/QuestionController.java
@@ -12,10 +12,15 @@ import com.yupi.chenoj.constant.UserConstant;
 import com.yupi.chenoj.exception.BusinessException;
 import com.yupi.chenoj.exception.ThrowUtils;
 import com.yupi.chenoj.model.dto.question.*;
+import com.yupi.chenoj.model.dto.questionsubmit.QuestionSubmitAddRequest;
+import com.yupi.chenoj.model.dto.questionsubmit.QuestionSubmitQueryRequest;
 import com.yupi.chenoj.model.entity.Question;
+import com.yupi.chenoj.model.entity.QuestionSubmit;
 import com.yupi.chenoj.model.entity.User;
+import com.yupi.chenoj.model.vo.QuestionSubmitVO;
 import com.yupi.chenoj.model.vo.QuestionVO;
 import com.yupi.chenoj.service.QuestionService;
+import com.yupi.chenoj.service.QuestionSubmitService;
 import com.yupi.chenoj.service.UserService;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.BeanUtils;
@@ -39,6 +44,9 @@ public class QuestionController {
     private static final Gson GSON = new Gson();
     @Resource
     private QuestionService questionService;
+
+    @Resource
+    private QuestionSubmitService questionSubmitService;
 
     @Resource
     private UserService userService;
@@ -285,6 +293,44 @@ public class QuestionController {
         }
         boolean result = questionService.updateById(question);
         return ResultUtils.success(result);
+    }
+
+    /**
+     * 题目提交
+     * @param questionSubmitAddRequest
+     * @param request
+     * @return  提交记录的id
+     */
+    @PostMapping("/question_submit/do")
+    public BaseResponse<Long> doQuestionSubmit(@RequestBody QuestionSubmitAddRequest questionSubmitAddRequest,
+                                               HttpServletRequest request) {
+        if (questionSubmitAddRequest == null || questionSubmitAddRequest.getQuestionId() <= 0) {
+            throw new BusinessException(ErrorCode.PARAMS_ERROR);
+        }
+        // 登录才能题目提交
+        final User loginUser = userService.getLoginUser(request);
+        long questionSubmitId = questionSubmitService.doQuestionSubmit(questionSubmitAddRequest, loginUser);
+        return ResultUtils.success(questionSubmitId);
+    }
+
+    /**
+     * 分页获取题目列表(除了管理员外，普通用户只能看到非答案，提交答案等公开信息)
+     *
+     * @param questionSubmitQueryRequest
+     * @param request
+     * @return
+     */
+    @PostMapping("/question_submit/list/page")
+    public BaseResponse<Page<QuestionSubmitVO>> listQuestionSubmitByPage(@RequestBody QuestionSubmitQueryRequest questionSubmitQueryRequest,
+                                                                         HttpServletRequest request) {
+        long current = questionSubmitQueryRequest.getCurrent();
+        long size = questionSubmitQueryRequest.getPageSize();
+        //从数据库中查询原始的题目提交分页信息
+        Page<QuestionSubmit> questionSubmitPage = questionSubmitService.page(new Page<>(current, size),
+                questionSubmitService.getQueryWrapper(questionSubmitQueryRequest));
+        final User loginUser = userService.getLoginUser(request);
+        //返回脱敏信息
+        return ResultUtils.success(questionSubmitService.getQuestionSubmitVOPage(questionSubmitPage,loginUser));
     }
 
 }
